<package format="3">
  <name>ros_ign_bridge</name>
  <version>0.9.6</version>
  <description>Bridge communication between ROS and Ignition Transport</description>
  <license>Apache 2.0</license>
  <maintainer email="caguero@openrobotics.org">Carlos Agüero</maintainer>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Citadel -->
  <depend condition="$IGNITION_VERSION == citadel">ignition-msgs5</depend>
  <depend condition="$IGNITION_VERSION == citadel">ignition-transport8</depend>
  <!-- Fortress (default) -->
  <depend condition="$IGNITION_VERSION == fortress">ignition-msgs8</depend>
  <depend condition="$IGNITION_VERSION == fortress">ignition-transport11</depend>
  <depend condition="$IGNITION_VERSION == ''">ignition-msgs8</depend>
  <depend condition="$IGNITION_VERSION == ''">ignition-transport11</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>rostest</test_depend>

  <replace>ros1_ign_bridge</replace>
</package>
