<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_ign_bridge</name>
  <version>0.221.2</version>
  <description>Bridge communication between ROS and Ignition Transport</description>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>

  <license>Apache 2.0</license>

  <author>Shivesh Khaitan</author>
  <author email="louise@openrobotics.org">Louise Poubel</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!-- Edifice -->
  <depend condition="$IGNITION_VERSION == edifice">ignition-msgs7</depend>
  <depend condition="$IGNITION_VERSION == edifice">ignition-transport10</depend>
  <!-- Citadel (default) -->
  <depend condition="$IGNITION_VERSION == citadel">ignition-msgs5</depend>
  <depend condition="$IGNITION_VERSION == citadel">ignition-transport8</depend>
  <depend condition="$IGNITION_VERSION == ''">ignition-msgs5</depend>
  <depend condition="$IGNITION_VERSION == ''">ignition-transport8</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
