<package format="3">
  <name>ros_ign_bridge</name>
  <version>0.111.2</version>
  <description>Bridge communication between ROS and Ignition Transport</description>
  <license>Apache 2.0</license>
  <maintainer email="caguero@openrobotics.org">Carlos Agüero</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <!-- Not on Noetic https://github.com/ethz-asl/mav_comm/issues/86
  <depend>mav_msgs</depend-->
  <depend>nav_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Garden -->
  <depend condition="$IGNITION_VERSION == garden">ignition-msgs9</depend>
  <depend condition="$IGNITION_VERSION == garden">ignition-transport12</depend>
  <!-- Fortress -->
  <depend condition="$IGNITION_VERSION == fortress">ignition-msgs8</depend>
  <depend condition="$IGNITION_VERSION == fortress">ignition-transport11</depend>
  <!-- Edifice -->
  <depend condition="$IGNITION_VERSION == edifice">ignition-msgs7</depend>
  <depend condition="$IGNITION_VERSION == edifice">ignition-transport10</depend>
  <!-- Citadel (default) -->
  <depend condition="$IGNITION_VERSION == citadel">ignition-msgs5</depend>
  <depend condition="$IGNITION_VERSION == citadel">ignition-transport8</depend>
  <depend condition="$IGNITION_VERSION == ''">ignition-msgs5</depend>
  <depend condition="$IGNITION_VERSION == ''">ignition-transport8</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>rostest</test_depend>

  <replace>ros1_ign_bridge</replace>
</package>
