<package format="3">
  <name>ros_ign_gazebo</name>
  <version>0.9.6</version>
  <description>Tools for using Ignition Gazebo simulation with ROS.</description>
  <license>Apache 2.0</license>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libgflags-dev</depend>

  <!-- Citadel -->
  <depend condition="$IGNITION_VERSION == citadel">ignition-gazebo3</depend>
  <!-- Fortress (default) -->
  <depend condition="$IGNITION_VERSION == fortress">ignition-gazebo6</depend>
  <depend condition="$IGNITION_VERSION == ''">ignition-gazebo6</depend>

  <depend>roscpp</depend>
</package>
