<package format="3">
  <name>ros_ign_gazebo_demos</name>
  <version>0.244.16</version>
  <description>Shim package to redirect to ros_gz_sim_demos.</description>
  <license>Apache 2.0</license>
  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_gz_sim_demos</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
