<package format="3">
  <name>ros_ign_image</name>
  <version>0.9.6</version>
  <description>Image utilities for Ignition simulation with ROS.</description>
  <license>Apache 2.0</license>
  <author email="louise@openrobotics.org">Louise Poubel</author>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Citadel -->
  <depend condition="$IGNITION_VERSION == citadel">ignition-msgs5</depend>
  <depend condition="$IGNITION_VERSION == citadel">ignition-transport8</depend>
  <!-- Fortress (default) -->
  <depend condition="$IGNITION_VERSION == fortress">ignition-msgs8</depend>
  <depend condition="$IGNITION_VERSION == fortress">ignition-transport11</depend>
  <depend condition="$IGNITION_VERSION == ''">ignition-msgs8</depend>
  <depend condition="$IGNITION_VERSION == ''">ignition-transport11</depend>

  <depend>image_transport</depend>
  <depend>ros_ign_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>rostest</test_depend>

  <replace>ros1_ign_image</replace>
</package>
